[package]
name = "twisty-tesseract"
version = "0.1.0"
authors = ["Aditya Mishra <adityam.rtm@gmail.com>"]
description = "permutation puzzle in the shape of 4-dimensional hyper-rubik's-cube of size 4"
license = "MIT/Apache-2.0"
repository = "https://github.com/aditya-r-m/twisty-tesseract"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
